# bindfinder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  install.sh
.codex/: INSTALL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Formula/: bindfinder.rb
assets/packs/: tmux.yaml
docs/: config.md  install.md  navi.md  packs.md  release.md  skills.md  tmux.md
docs/releases/: v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.18.md  v0.1.19.md  v0.1.2.md  v0.1.20.md  v0.1.21.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
examples/: config.yaml
man/: bindfinder.1
skills/bindfinder-key-packs/: SKILL.md
skills/bindfinder-key-packs/agents/: openai.yaml
skills/bindfinder-key-packs/references/: local-config-discovery.md  pack-shape.md  vim-example.md
src/: main.rs  paths.rs  update.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: catalog.rs  mod.rs  navi.rs  pack.rs  pack_repo.rs  tmux.rs
src/integration/: detect.rs  install.rs  mod.rs
src/state/: mod.rs
src/tui/: mod.rs
