[package]
name = "bindfinder"
version = "0.1.1"
edition = "2021"
description = "Terminal-first command reference browser for SSH and tmux workflows"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6.0"
