[package]
name = "bindfinder"
version = "0.1.20"
edition = "2021"
description = "Terminal command palette and cheatsheet browser for commands, keybindings, and shell workflows"
license = "MIT"
readme = "README.md"
repository = "https://github.com/younesehb/bindfinder"
homepage = "https://github.com/younesehb/bindfinder"
documentation = "https://github.com/younesehb/bindfinder/tree/main/docs"
keywords = ["cli", "tui", "terminal", "tmux", "cheatsheet"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6.0"
ureq = { version = "2.12", features = ["json"] }
